hover line  header links

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       <!--navigatia-->
 
       <nav>
-        <ul>
-          <li class="nav-first-item">
+        <ul class="header-nav">
+          <li class="nav-first-item underline">
             <a href="./index.html" class="active">Studio</a>
           </li>
-          <li class="nav-second-item">
+          <li class="nav-second-item underline">
             <a href="./portofolio.html" class="visited">Portofolio</a>
           </li>
-          <li class="nav-third-item">
+          <li class="nav-third-item underline">
             <a href="Contacts" class="visited">Contacts</a>
           </li>
         </ul>
