finished what we do section

--- a/portofolio.html
+++ b/portofolio.html
@@ -33,14 +33,14 @@
       <!--navigatia-->
 
       <nav>
-        <ul>
-          <li class="nav-first-item">
+        <ul class="header-nav">
+          <li class="nav-first-item underline">
             <a href="./index.html" class="visited">Studio</a>
           </li>
-          <li class="nav-second-item">
+          <li class="nav-second-item underline">
             <a href="./portofolio.html" class="active">Portofolio</a>
           </li>
-          <li class="nav-third-item">
+          <li class="nav-third-item underline">
             <a href="Contacts" class="visited">Contacts</a>
           </li>
         </ul>
@@ -112,8 +112,8 @@
               />
               <p class="image-title">Seafood Restaurant</p>
               <p class="image-description">Apps</p>
-            </div class="proiect">
-            <div>
+            </div>
+            <div class="proiect">
               <img
                 src="./imagesportofolio/fourth.jpg"
                 alt="Project Prime"
