--- a/index.html
+++ b/index.html
@@ -136,13 +136,30 @@
         <h2 class="second-title">What we do</h2>
         <ul class="photo-what-we-do">
           <li>
-            <img src="./images/imgno1.jpg" alt="imgno1" width="370" />
+            <div class="textoverlay">
+              <img
+                src="./images/desktopapp.jpg"
+                alt="Desktop App"
+                width="370"
+              />
+              <p class="label">DESKTOP APPS</p>
+            </div>
           </li>
           <li>
-            <img src="./images/imgno2.jpg" alt="imgno2" width="370" />
+            <div class="textoverlay">
+              <img src="./images/mobileapp.jpg" alt="Mobile App" width="370" />
+              <p class="label">MOBILE APPS</p>
+            </div>
           </li>
           <li>
-            <img src="./images/imgno3.jpg" alt="imgno3" width="370" />
+            <div class="textoverlay">
+              <img
+                src="./images/designsol.jpg"
+                alt="Design Solutions"
+                width="370"
+              />
+              <p class="label">DESIGN SOLUTIONS</p>
+            </div>
           </li>
         </ul>
       </section>
