some small changes

--- a/portofolio.html
+++ b/portofolio.html
@@ -81,6 +81,7 @@
               <li><button type="button" class="button">Marketing</button></li>
             </ul>
           </nav>
+
           <!--butoane filtre-->
 
           <!-- portofolio  -->
@@ -92,8 +93,10 @@
                 width="370"
                 alt="Technoduck"
               />
-              <p class="image-title">Technoduck</p>
-              <p class="image-description">Web-site</p>
+              <div class="photo-title">
+                <p class="image-title">Technoduck</p>
+                <p class="image-description">Web-site</p>
+              </div>
             </div>
             <div class="proiect">
               <img
@@ -101,8 +104,10 @@
                 alt="Poster New Orlean vs Golden Star"
                 width="370"
               />
-              <p class="image-title">Poster New Orlean vs Golden Star</p>
-              <p class="image-description">Design</p>
+              <div class="photo-title">
+                <p class="image-title">Poster New Orlean vs Golden Star</p>
+                <p class="image-description">Design</p>
+              </div>
             </div>
             <div class="proiect">
               <img
@@ -110,8 +115,10 @@
                 alt="Seafood restaurant"
                 width="370"
               />
-              <p class="image-title">Seafood Restaurant</p>
-              <p class="image-description">Apps</p>
+              <div class="photo-title">
+                <p class="image-title">Seafood Restaurant</p>
+                <p class="image-description">Apps</p>
+              </div>
             </div>
             <div class="proiect">
               <img
@@ -119,8 +126,10 @@
                 alt="Project Prime"
                 width="370"
               />
-              <p class="image-title">Project Prime</p>
-              <p class="image-description">Marketing</p>
+              <div class="photo-title">
+                <p class="image-title">Project Prime</p>
+                <p class="image-description">Marketing</p>
+              </div>
             </div>
             <div class="proiect">
               <img
@@ -128,8 +137,10 @@
                 alt="Project Boxes"
                 width="370"
               />
-              <p class="image-title">Project Boxes</p>
-              <p class="image-description">Apps</p>
+              <div class="photo-title">
+                <p class="image-title">Project Boxes</p>
+                <p class="image-description">Apps</p>
+              </div>
             </div>
             <div class="proiect">
               <img
@@ -137,8 +148,10 @@
                 alt="Inspiration has no Borders"
                 width="370"
               />
-              <p class="image-title">Inspiration has no Borders</p>
-              <p class="image-description">Web-site</p>
+              <div class="photo-title">
+                <p class="image-title">Inspiration has no Borders</p>
+                <p class="image-description">Web-site</p>
+              </div>
             </div>
             <div class="proiect">
               <img
@@ -146,8 +159,10 @@
                 alt="Limited Edition"
                 width="370"
               />
-              <p class="image-title">Limited Edition</p>
-              <p class="image-description">Design</p>
+              <div class="photo-title">
+                <p class="image-title">Limited Edition</p>
+                <p class="image-description">Design</p>
+              </div>
             </div>
             <div class="proiect">
               <img
@@ -155,8 +170,10 @@
                 alt="Project LAB"
                 width="370"
               />
-              <p class="image-title">Project LAB</p>
-              <p class="image-description">Marketing</p>
+              <div class="photo-title">
+                <p class="image-title">Project LAB</p>
+                <p class="image-description">Marketing</p>
+              </div>
             </div>
             <div class="proiect">
               <img
@@ -164,8 +181,10 @@
                 alt="Growing Business"
                 width="370"
               />
-              <p class="image-title">Growing Business</p>
-              <p class="image-description">Apps</p>
+              <div class="photo-title">
+                <p class="image-title">Growing Business</p>
+                <p class="image-description">Apps</p>
+              </div>
             </div>
           </div>
         </div>
