image portofolio hover  text

--- a/portofolio.html
+++ b/portofolio.html
@@ -88,99 +88,191 @@
 
           <div class="portofolio-container">
             <div class="proiect">
-              <img
-                src="./imagesportofolio/first.jpg"
-                width="370"
-                alt="Technoduck"
-              />
+              <div class="overlay">
+                <img
+                  class="image_portofolio"
+                  src="./imagesportofolio/first.jpg"
+                  width="370"
+                  alt="Technoduck"
+                />
+                <div class="image__overlay">
+                  <div class="text-image-portofolio">
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
+                  </div>
+                </div>
+              </div>
               <div class="photo-title">
                 <p class="image-title">Technoduck</p>
                 <p class="image-description">Web-site</p>
               </div>
             </div>
             <div class="proiect">
-              <img
-                src="./imagesportofolio/second.jpg"
-                alt="Poster New Orlean vs Golden Star"
-                width="370"
-              />
+              <div class="overlay">
+                <img
+                  class="image_portofolio"
+                  src="./imagesportofolio/second.jpg"
+                  alt="Poster New Orlean vs Golden Star"
+                  width="370"
+                />
+                <div class="image__overlay">
+                  <div class="text-image-portofolio">
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
+                  </div>
+                </div>
+              </div>
               <div class="photo-title">
                 <p class="image-title">Poster New Orlean vs Golden Star</p>
                 <p class="image-description">Design</p>
               </div>
             </div>
             <div class="proiect">
-              <img
-                src="./imagesportofolio/third.jpg"
-                alt="Seafood restaurant"
-                width="370"
-              />
+              <div class="overlay">
+                <img
+                  class="image_portofolio"
+                  src="./imagesportofolio/third.jpg"
+                  alt="Seafood restaurant"
+                  width="370"
+                />
+                <div class="image__overlay">
+                  <div class="text-image-portofolio">
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
+                  </div>
+                </div>
+              </div>
+
               <div class="photo-title">
                 <p class="image-title">Seafood Restaurant</p>
                 <p class="image-description">Apps</p>
               </div>
             </div>
             <div class="proiect">
-              <img
-                src="./imagesportofolio/fourth.jpg"
-                alt="Project Prime"
-                width="370"
-              />
+              <div class="overlay">
+                <img
+                  class="image_portofolio"
+                  src="./imagesportofolio/fourth.jpg"
+                  alt="Project Prime"
+                  width="370"
+                />
+                <div class="image__overlay">
+                  <div class="text-image-portofolio">
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
+                  </div>
+                </div>
+              </div>
               <div class="photo-title">
                 <p class="image-title">Project Prime</p>
                 <p class="image-description">Marketing</p>
               </div>
             </div>
             <div class="proiect">
-              <img
-                src="./imagesportofolio/five.jpg"
-                alt="Project Boxes"
-                width="370"
-              />
+              <div class="overlay">
+                <img
+                  class="image_portofolio"
+                  src="./imagesportofolio/five.jpg"
+                  alt="Project Boxes"
+                  width="370"
+                />
+                <div class="image__overlay">
+                  <div class="text-image-portofolio">
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
+                  </div>
+                </div>
+              </div>
               <div class="photo-title">
                 <p class="image-title">Project Boxes</p>
                 <p class="image-description">Apps</p>
               </div>
             </div>
             <div class="proiect">
-              <img
-                src="./imagesportofolio/sixth.jpg"
-                alt="Inspiration has no Borders"
-                width="370"
-              />
+              <div class="overlay">
+                <img
+                  class="image_portofolio"
+                  src="./imagesportofolio/sixth.jpg"
+                  alt="Inspiration has no Borders"
+                  width="370"
+                />
+                <div class="image__overlay">
+                  <div class="text-image-portofolio">
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
+                  </div>
+                </div>
+              </div>
               <div class="photo-title">
                 <p class="image-title">Inspiration has no Borders</p>
                 <p class="image-description">Web-site</p>
               </div>
             </div>
             <div class="proiect">
-              <img
-                src="./imagesportofolio/seven.jpg"
-                alt="Limited Edition"
-                width="370"
-              />
+              <div class="overlay">
+                <img
+                  class="image_portofolio"
+                  src="./imagesportofolio/seven.jpg"
+                  alt="Limited Edition"
+                  width="370"
+                />
+                <div class="image__overlay">
+                  <div class="text-image-portofolio">
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
+                  </div>
+                </div>
+              </div>
               <div class="photo-title">
                 <p class="image-title">Limited Edition</p>
                 <p class="image-description">Design</p>
               </div>
             </div>
             <div class="proiect">
-              <img
-                src="./imagesportofolio/eight.jpg"
-                alt="Project LAB"
-                width="370"
-              />
+              <div class="overlay">
+                <img
+                  class="image_portofolio"
+                  src="./imagesportofolio/eight.jpg"
+                  alt="Project LAB"
+                  width="370"
+                />
+                <div class="image__overlay">
+                  <div class="text-image-portofolio">
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
+                  </div>
+                </div>
+              </div>
               <div class="photo-title">
                 <p class="image-title">Project LAB</p>
                 <p class="image-description">Marketing</p>
               </div>
             </div>
             <div class="proiect">
-              <img
-                src="./imagesportofolio/nineth.jpg"
-                alt="Growing Business"
-                width="370"
-              />
+              <div class="overlay">
+                <img
+                  class="image_portofolio"
+                  src="./imagesportofolio/nineth.jpg"
+                  alt="Growing Business"
+                  width="370"
+                />
+                <div class="image__overlay">
+                  <div class="text-image-portofolio">
+                    Technoduck is a state-of-the-art coronavirus distribution
+                    platform. Companies use this platform for digital espionage
+                    and attacks on competitors' secure servers.
+                  </div>
+                </div>
+              </div>
+
               <div class="photo-title">
                 <p class="image-title">Growing Business</p>
                 <p class="image-description">Apps</p>
