tranzition at hover and focus

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
       <nav>
         <ul class="header-nav">
-          <li class="nav-first-item underline">
-            <a href="./index.html" class="active">Studio</a>
+          <li class="nav-first-item">
+            <a href="./index.html" class="active underline">Studio</a>
           </li>
-          <li class="nav-second-item underline">
+          <li class="nav-second-item">
             <a href="./portofolio.html" class="visited">Portofolio</a>
           </li>
-          <li class="nav-third-item underline">
+          <li class="nav-third-item">
             <a href="Contacts" class="visited">Contacts</a>
           </li>
         </ul>
