--- a/portofolio.html
+++ b/portofolio.html
@@ -34,13 +34,13 @@
 
       <nav>
         <ul class="header-nav">
-          <li class="nav-first-item underline">
+          <li class="nav-first-item">
             <a href="./index.html" class="visited">Studio</a>
           </li>
           <li class="nav-second-item underline">
-            <a href="./portofolio.html" class="active">Portofolio</a>
+            <a href="./portofolio.html" class="active underline">Portofolio</a>
           </li>
-          <li class="nav-third-item underline">
+          <li class="nav-third-item">
             <a href="Contacts" class="visited">Contacts</a>
           </li>
         </ul>
